crates/toml_edit/tests/snapshots/invalid/inline-table/empty-03.stderr
TOML parse error at line 2, column 1
  |
2 | ,
  | ^
extra comma in inline table, expected key
